--- a/Зоринэнь_Игнатий.mw
+++ b/Зоринэнь_Игнатий.mw
@@ -7,6 +7,8 @@
 ==Сёрм.:==
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Мокшэрзянь литературань антология, XVIII--XX Векне / Кочказе, сёрмадозень очеркнень и комментариятнень А.В. Алёшкин.-- Саранск: Мордовскяй книжнай издательствась. 2003.-- 480 с. -- Мордов.-мокша, эрзя, рус. яз.-- (Тюштянь масторонц моронза-арьсеманза).
 
 
-[[Category:Эрзянь ломанть|З]]
+[[Category:Эрзянь валморонь ладсийть|З]]
+[[Category:Эрзякс кортыцят|З]]
