сёрмадома лувонь витнема-петнема

--- a/Араповонь_Саша.mw
+++ b/Араповонь_Саша.mw
@@ -159,13 +159,13 @@
 #Взмах: стихи (2001)
 #Щанкина, Р. «Оймесь анок сезневемс панксонь - панкс…» // Эрзянь правда.- 2002.- 29 янв.
 #Демин, В. Убедительный взмах // Мордовия – 7 дней.- 2002.- 16-22 янв.(№ 3).- С. 10.
-#Демин, В. И. Взмах поэтических крыльев  // Лит. Россия.- 2002.- 1 февр.- С. 6.
+#Дёмин, В. И. Взмах поэтических крыльев  // Лит. Россия.- 2002.- 1 февр.- С. 6.
 #Преснякова, Л. «Нам ничего на свете не простится…» // Изв. Мордовии.- 2002.- 24 янв.
 #Смородин, К. «Со своею душою согласный…» // Мордовия.- 7 дней.- 2003.- 5-11 февр. (№ 6).- С. 13.
 #Мейле: стихть (2006)
-#Демин, В. «Верепаз! Макст монень вий…»: Александр Араповонь «Мейле» пусмодонзо тешкст // Сятко.- 2007.- № 6.- С. 91-101.
+#Дёмин, В. «Верепаз! Макст монень вий…»: Александр Араповонь «Мейле» пусмодонзо тешкст // Сятко.- 2007.- № 6.- С. 91-101.
 #Жест: стихи (2010)
-#Демин, В. Тен - сонзэ канстось, сонсь кочкизе, сонсь…: Александр Араповонь стихень од пусмодонзо вал // Сятко.- 2011.- № 1.- С. 102-115.                               
+#Дёмин, В. Тен - сонзэ канстось, сонсь кочкизе, сонсь…: Александр Араповонь стихень од пусмодонзо вал // Сятко.- 2011.- № 1.- С. 102-115.                               
 ====Библиографиясь ====
 #Брыжинский, А. И. Арапов Александр Васильевич (1959) / А. И. Брыжинский, О. В. Пашутина, Е. И.Чернов // Брыжинский, А. И. Писатели Мордовии: библиогр. справ. / А. И. #Брыжинский, О. В. Пашутина, Е. И. Чернов.- Саранск, 2001.- С. 72-74
 
