Зоринэнь коряс Вечкань веле

--- a/Исаклань_буе_Самарань_ёнксcо.mw
+++ b/Исаклань_буе_Самарань_ёнксcо.mw
@@ -60,7 +60,7 @@
 *  ({{lang-ru|Новый Байтермиш}} - {{lang-myv|[[Од Байтермиш (Исаклань буе)|Од Байтермиш]]}}) 
 *  ({{lang-ru|Пригорки}} - {{lang-myv|[[Пригорки (Исаклань буе)|Пригорки]]}}) 
 *  ({{lang-ru|Средняя Алексеевка}} - {{lang-myv|[[Средняя Алексеевка (Исаклань буе)|Средняя Алексеевка]]}})
-*  ({{lang-ru|Старое Вечканово}} - {{lang-myv|[[Ташто Вечканово (Исаклань буе)|Ташто Вечканово]]}}) 
+*  ({{lang-ru|Старое Вечканово}} - {{lang-myv|[[Ташто Вечкань веле (Исаклань буе)|Ташто Вечкань веле]]}}) 
 *  ({{lang-ru|Чёрная Речка}} - {{lang-myv|[[Чёрная Речка (Исаклань буе)|Чёрная Речка]]}}) 
 
 човор велеть:
