сёрмадома лувонь витнема-петнема

--- a/Баганя_веле_(Шенталань_буе).mw
+++ b/Баганя_веле_(Шенталань_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Баганя веле''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс]]о.
+'''Баганя веле''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс|Самарань ёнкссо]].
 
 == Веленть лемденть  ==
 
@@ -68,7 +68,7 @@
 * [[Мокшановонь Татьяна]] — неень шкань [[Эрзя|эрзянь]] валморозей.
 
 == Веленть эрямозо  ==
-20014 иень [[ацамковонь 5 чи]]сте Баганя веле ютась эрянь келень ды литературань коряс олимпиада ды эрзянь келень тонавтыцятнень ютксо пелькстамо<ref> [http://chilisema.ru/upload/iblock/86a/1-15-ilovepdf-compressed.pdf  БАГАНЯНЬ ШКОЛАСО ЭРЗЯНЬ ПОКШ ЧИ {{ref-myv}}]</ref>.
+2014 иень [[ацамковонь 5 чи]]стэ Баганя веле ютась эрзянь келень ды литературань коряс олимпиада ды эрзянь келень тонавтыцятнень ютксо пелькстамо<ref> [http://chilisema.ru/upload/iblock/86a/1-15-ilovepdf-compressed.pdf  БАГАНЯНЬ ШКОЛАСО ЭРЗЯНЬ ПОКШ ЧИ {{ref-myv}}]</ref>.
 
 == Сёрм.: ==
 <references />
