--- a/Зоринэнь_Игнатий.mw
+++ b/Зоринэнь_Игнатий.mw
@@ -1,14 +1,51 @@
-'''Зоринэнь Игнатий''' те шкас лияли мокшэрзянь литературань историяс парсте апак совавто литераторкс. Содамочись Зоринэнь эрямодо неень шкас пачкодсь пек аламо. Содазь ансяк чачома тарказо - Самара губерниянь Бугурусланской уездэнь эрзянь [[Вечкань веле|Вечкань велесь]]. [[Паасонен Хейкки|Хейкки Паасонен]] марто сон васенцеде вастовсь 1898 иестэ, зярдо финнэнь учёноесь сакшнось Вечкань велев народной ёвксонь кочкамо ды сёрмадсь пельдензэ фольклор жанрань сядодо ламо произведения. Конатнень ютксто комсте ламотне авторскойть, эсензэ поэмат-ёвкст. Зоринэнь кодаяк а маштови явомс мокшэрзянь народной литературанть эйстэ. Сон ульнесь аволь умонь пингень сказителькс, а сёрмас-грамотас содыця поэтэкс. Ламо эсь поэманзо-ёвксонзо сон лемдинзе народной поэзиянь традиционной жанрань лемсэ-- морокс. Паасоненэнь кучозь сёрманзо эйстэ, конат те шкас вастневить Хельсинкисэ, Финнэнь-Угрань Вейсэндявксонь архивсэ, парсте неяви: сон, кода литератор ульнесь мокшэрзянь раськень коень-кирдань чарькоди ломань, ташто пингень озномань ванстыця. Кода эсь Пазнэнь кемиця ломань, Зорин арасель христианской озномань каршо молиця ломань. Комсте ламо поэмасонзо  арась вейкеяк истямо, косо конфликттнэ улевельть сюлмавозь антихристианской идея марто. Зоринэнь "каршо молемазо" - те мокшэрзятнень раськень коень-традициянь вешнемань-ризнэмань ванстомась.
+{{Ломанесь
+ |лем                  = Зоринэнь Игнатий
+ |оригинальной лем      = 
+ |чачома лем         = Игнатий Тимофеевич Зорин
+ |артовкс              = 
+ |артовксонть покшолмазо   = 
+ |артовксонть эйсте =  
+ |важодема ёрокчизе     = валморонь ладсий, ёвксонь морыця-лациця
+ |чачома чись          = 
+ |чачома тарка         = {{ЧачомаТарка|Ташто Вечкань веле||Ташто Вечкань веле (Исаклань буе)}}, {{ЧачомаТарка|Исаклань буе||Исаклань буе Самарань ёнксcо}}, {{ЧачомаТарка|Самара ёнкс}}
+ |гражданство            = {{Масторкоцт|Россиянь Империя}}<br /> {{Масторкоцт|СССР}}
+ |подданство           = 
+ |кулома чись          = 
+ |кулома тарка         = {{КуломаТарка|}}
+ |тетязо               = 
+ |авазо                = 
+ |мирдезэ              = 
+ |низэ                 = 
+ |эйкакшонзо           = 
+ |казнеть ды медальть  = 
+ |автограф             = 
+ |вальма                = 
+ |википурнавкс         = 
+}}
 
-Кода поэт-сказитель, Зоринэнь Игнатий эрясь и лацесь эсь поэманзо истямо пингстэ, зярдо мокшэрзятнень эрямосо сатышка виевекс ульнесть языческой умонь традициятне да парсте арасельть кемекстазь христианской озноманть юронзо. "Сыресь" и "одось" поэмасонзо пек стакасто явовить вейке-омбоценть эйстэ. Сонзэ идейно-эстетической вешнеманзо седе шождасто чарькодевить поэманзо мотивень и содержаниянь коряс. Те ёндо сонзэ поэтической сказонзо явовить колмов: Мифологической мотив марто поэмат-ёвкст ("Тынь кунсолодо, мокшот-эрзят", "Мекс кезэрень пингстэ минек коряс эрясть седе парсте", "Ташто моро", "Кода [[Пурьгинепаз|Пурьгине]] саизе никс [[Верепаз|Вере Пазонь]] омботькс мазы тейтерензэ [[Везорго|Везоргонь]]" и лият), конат анокстазь Тюштя пингень эрямонть шнамс; омбоце цикласонть седе парсте марявить социально-исторической мельтне-ёжотне ("Седе икеле минь эринек Пугачёвонь пингстэ", "Од цёра башкиртнэнь ютксо", "Кезэрень солдатстванть ланга моро" ды лият); башка тарка саить лирической поэманзо, конатнень юрс путозь народной моротнень мотивест ("Кода Родя поланзо микшнизе ды одов рамизе", "Моро одпорадо ды сыречиде", "Наян моро", "Симицянь моро" ды лият). Те циклантень совавтовить вечкемадо поэматне и васняяк сеть, конатнень юрост сюлмавозь од домантнень койтне-традициятне марто ды народной моротнень марто. Ташто пингстэ истямо моротнень морсилизь ансяк од ломантнень аштема кудова ([[Пиянь кудо|Пиянь кудо]], [[Роштувань кудо|Роштувань кудо]], [[Тейтерень кудо|Тейтерень кудо]]). Секскак и раськень моротнень эйсэ и Зоринэнь поэтической ёвтнематнесэ сатышка тарка саить эротической мотивтне. Мифологической мотив марто поэманзо юрс путозь аволь сынсь мифтне, а ансяк сынст геройтнень лемтне. Весе, мезе теить Пазонь лемсэ лемдезь геройтне -- те масторлангонь ломантнень эрямост, талномаст. Мокшэрзянь мифтнесэ ды мифологической народной моротнесэ истямо мотивт-сюжет арасть. Зоринэнь поэмасонзо те сюжетэсь --литературной и лемдемс сонзэ народной моронь сюжетэкс а маштови. Текень сави ёвтамс и "Цёрась паро Левонтей" поэманть коряс. Сонзэ сюжетэзе аволь мифологической, но и кода Пургине ланга поэмасо, сюлмазь мифологической мотив марто.
+'''Зоринэнь Игнатий''' — эрзянь валморонь ладсий, ёвксонь морыця-лациця.
 
-Омбоце циклань поэмасонзо,конат сюлмавозь социально-исторической тема марто, башка мель саи поэмазо "Седе икеле эринек минь Пугачёвонь пингстэ". Се, мезде корты Аника атя, моли каршо сеть содамочитнеде [[Пугачёв|Пугачёвдо]], конат ладсевсть ланганзо советской пингень историясо и художественной произведениятнесэ. Аволь стяко Зоринэнь те поэмась Паасоненэнь сборникте башка вестькак и косояк эзь печатавкшно. "Пугачёвонь пингстэ, -- сёрмады Зорин поэманть ушодкссо, минь ламо нужа неинек, сельмеведь ламо валынек, эсенек азоромок арасель, хоть и рузонь азор ульнесь. Аволь маласо сон эрясь, кисэнек эзь ризнэ". Игнатий Зоринэнь шкинемасо неявикс тарка саить од ломанень бытовой темадо сёрмадозь лирической поэманзо. Сыненст кода и лия циклань поэмазонзо совавтозь мокшэрзянь койтнень-кирдатнень кисэ ризнэмась. Но нетне ёвкстнэнь сюжетсэ сеедьстэ вастневи пеедькшнема, а таркат-таркат и поэтической сатирань тюс.
+Те шкас лияли мокшэрзянь литературань историяс парсте апак совавто литераторкс. Содамочись Зоринэнь эрямодо неень шкас пачкодсь пек аламо. Содазь ансяк чачома тарказо — Самара губерниянь Бугурусланской уездэнь эрзянь [[Ташто Вечкань веле (Исаклань буе)|Вечкань велесь]]. [[Паасонен Хейкки|Хейкки Паасонен]] марто сон васенцеде вастовсь [[1898 ие]]стэ, зярдо финнэнь учёноесь сакшнось Вечкань велев раськень ёвксонь кочкамо ды сёрмадсь пельдензэ фольклор жанрань [[сядо]]до ламо произведения. Конатнень ютксто комсте ламотне авторскойть, эсензэ поэмат-ёвкст. Зоринэнь кодаяк а маштови явомс мокшэрзянь народной литературанть эйстэ. Сон ульнесь аволь умонь [[пинге]]нь лацицякс, а сёрмас-грамотас содыця валморозеекс. Ламо эсь поэманзо-ёвксонзо сон лемдинзе народной поэзиянь традиционной жанрань лемсэ — [[моро]]кс. Паасоненэнь кучозь сёрманзо эйстэ, конат те шкас вастневить [[Хельсинки]]сэ, Финнэнь-Угрань Вейсэндявксонь архивсэ, парсте неяви: сон, кода литератор ульнесь мокшэрзянь раськень коень-кирдань чарькоди ломань, ташто пингень озномань ванстыця. Кода эсь Пазнэнь кемиця ломань, Зорин арасель христианской озномань каршо молиця ломань. Комсте ламо поэмасонзо  арась вейкеяк истямо, косо конфликттнэ улевельть сюлмавозь антихристианской идея марто. Зоринэнь  «каршо молемазо» - те мокшэрзятнень раськень коень-традициянь вешнемань-ризнэмань ванстомась.
+
+Кода поэт-сказитель, Зоринэнь Игнатий эрясь и лацесь эсь поэманзо истямо пингстэ, зярдо мокшэрзятнень эрямосо сатышка виевекс ульнесть языческой умонь традициятне да парсте арасельть кемекстазь христианской озноманть юронзо. «Сыресь» и «одось» поэмасонзо пек стакасто явовить вейке-омбоценть эйстэ. Сонзэ идейно-эстетической вешнеманзо седе шождасто чарькодевить поэманзо мотивень и содержаниянь коряс. Те ёндо сонзэ поэтической сказонзо явовить колмов: 
+# Мифологической мотив марто поэмат-ёвкст («Тынь кунсолодо, мокшот-эрзят», «Мекс кезэрень пингстэ минек коряс эрясть седе парсте», «Ташто моро», «Кода [[Пурьгинепаз|Пурьгине]] саизе никс [[Верепаз|Вере Пазонь]] омботькс мазы тейтерензэ [[Везорго|Везоргонь]]» и лият), конат анокстазь Тюштя пингень эрямонть шнамс); 
+# омбоце цикласонть седе парсте марявить социально-исторической мельтне-ёжотне («Седе икеле минь эринек Пугачёвонь пингстэ», «Од цёра башкиртнэнь ютксо», «Кезэрень солдатстванть ланга моро» ды лият); 
+# башка тарка саить лирической поэманзо, конатнень юрс путозь народной моротнень мотивест («Кода Родя поланзо микшнизе ды одов рамизе», «Моро одпорадо ды сыречиде», «Наян моро», «Симицянь моро» ды лият). 
+
+Те циклантень совавтовить вечкемадо поэматне и васняяк сеть, конатнень юрост сюлмавозь од домантнень койтне-традициятне марто ды народной моротнень марто. Ташто пингстэ истямо моротнень морсилизь ансяк од ломантнень аштема кудова ([[Пиянь кудо|Пиянь кудо]], [[Роштувань кудо|Роштувань кудо]], [[Тейтерень кудо|Тейтерень кудо]]). Секскак и раськень моротнень эйсэ и Зоринэнь поэтической ёвтнематнесэ сатышка тарка саить эротической мотивтне. Мифологической мотив марто поэманзо юрс путозь аволь сынсь мифтне, а ансяк сынст геройтнень лемтне. Весе, мезе теить Пазонь лемсэ лемдезь геройтне — те масторлангонь ломантнень эрямост, талномаст. Мокшэрзянь мифтнесэ ды мифологической народной моротнесэ истямо мотивт-сюжет арасть. Зоринэнь поэмасонзо те сюжетэсь — литературной и лемдемс сонзэ народной моронь сюжетэкс а маштови. Текень сави ёвтамс и «Цёрась паро Левонтей» поэманть коряс. Сонзэ сюжетэзе аволь мифологической, но и кода Пургине ланга поэмасо, сюлмазь мифологической мотив марто.
+
+Омбоце циклань поэмасонзо, конат сюлмавозь социально-исторической тема марто, башка мель саи поэмазо «Седе икеле эринек минь Пугачёвонь пингстэ». Се, мезде корты Аника атя, моли каршо сеть содамочитнеде [[Пугачёв|Пугачёвдо]], конат ладсевсть ланганзо советской пингень историясо и художественной произведениятнесэ. Аволь стяко Зоринэнь те поэмась Паасоненэнь сборникте башка вестькак и косояк эзь печатавкшно. 
+{{Цитатань ушодома}}''«Пугачёвонь пингстэ,  минь ламо нужа неинек, сельмеведь ламо валынек, эсенек азоромок арасель, хоть и рузонь азор ульнесь. Аволь маласо сон эрясь, кисэнек эзь ризнэ».''{{Цитатань пе}}- сёрмады Зорин поэманть ушодкссо.
+
+Игнатий Зоринэнь шкинемасо неявикс тарка саить од ломанень бытовой темадо сёрмадозь лирической поэманзо. Сыненст кода и лия циклань поэмазонзо совавтозь мокшэрзянь койтнень-кирдатнень кисэ ризнэмась. Но нетне ёвкстнэнь сюжетсэ сеедьстэ вастневи пеедькшнема, а таркат-таркат и поэтической сатирань тюс.
 
 ==Сёрм.:==
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
-* Мокшэрзянь литературань антология, XVIII--XX Векне / Кочказе, сёрмадозень очеркнень и комментариятнень А.В. Алёшкин.-- Саранск: Мордовскяй книжнай издательствась. 2003.-- 480 с. -- Мордов.-мокша, эрзя, рус. яз.-- (Тюштянь масторонц моронза-арьсеманза).
+* Мокшэрзянь литературань антология, XVIII — XX Векне / Кочказе, сёрмадозень очеркнень и комментариятнень А.В. Алёшкин.— Саранск: Мордовскяй книжнай издательствась. 2003.— 480 с. — Мордов.-мокша, эрзя, рус. яз. — (Тюштянь масторонц моронза-арьсеманза).
 
+==Лисьм. ==
+<references />
 
 [[Category:Эрзянь валморонь ладсийть|З]]
 [[Category:Эрзякс кортыцят|З]]
