*Empty MediaWiki Message*

--- a/Петроской_ош.mw
+++ b/Петроской_ош.mw
@@ -4,7 +4,7 @@
  |оригинальное название   = {{Lang-ru|Петрозаводск}}<br/>{{Lang-krl|Petroskoi}}
  |изображение             = Petrozavodsk_Collage.jpg
  |подчинение              = 
- |мастор                  = Россия Мастор
+ |мастор                  = Россия
  |герб                    = Coat of Arms of Petrozavodsk (Karelia).svg
  |коцт                    = Flag_of_Petrozavodsk_(Karelia).png
  |описание герба          = 
