*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -26,7 +26,8 @@
 '''Евсевьев (Кобаев<ref name="fulr">[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Uchenyj_prosvetitel_pedagog_Makar_Evsevevich_Evsevev/ Финно-угорские библиотеки России. Макар Евсевьевич ЕВСЕВЬЕВ]{{ref-ru}}</ref>) Макар Евсевьевич'''  ([[1864]] [[якшамковонь 18 чи]], [[Цярмун (Ветькень Республика)|Цярмун]] - [[1931]] [[панжиковонь 10 чи]] [[Саранск]]) — васеньце<ref name="fulr" /> содавикс [[эрзят|эрзянь ломанень]] тонавтыця, наукань келень содый-теий докторось (1921). Эрзя.
 
 ==Эстедензэ==
-Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> ([[рузонь кель|рузокс]] ''Малые Кармалы'', [[ветькень кель|чуважокс]] ''Ирçе Çармăс''),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, ды те ёжомарямось ванстови мейле эрямонзо перть. Сон ульнесь энциклопедической содамочи марто филолог, содыця ломань, конань лемензэ марто сюлмавозь мокшэрзянь профессиональной наукась, культурвсь ды кельвалонь шкинеманть васенце эскельксэнзэ. Фольклорист, мокшонь ды эрзянь келень коряс васенце профессиональной исследователь,коень, эрямо тевень содыця, педагог, Мокшонь ды эрзянь кельтнень коряс тонавтнема книгань васенце автор. Макар Евсевьевич Евсевьев-- содыця ломань, конань и эсенек и лия масторонь наукасо вейке мельсэ лемдизь и "мокшэрзянь Лёнротокс" (П. Равила) и "мокшэрзянь литературань эсь раскень юртнэнь кастыцякс" (П. Домокош). 
+Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> ([[рузонь кель|рузокс]] ''Малые Кармалы'', [[ветькень кель|чуважокс]] ''Ирçе Çармăс''),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, ды те ёжомарямось ванстови мейле эрямонзо перть. 
+Сон ульнесь энциклопедической содамочи марто филолог, содыця ломань, конань лемензэ марто сюлмавозь мокшэрзянь профессиональной наукась, культурась ды кельвалонь шкинеманть васенце эскельксэнзэ. Фольклорист, мокшонь ды эрзянь келень коряс васенце профессиональной исследователь, коень, эрямо тевень содыця, педагог, мокшонь ды эрзянь кельтнень коряс тонавтнема книгань васенце автор. Макар Евсевьевич Евсевьев-- содыця ломань, конань и эсенек и лия масторонь наукасо вейке мельсэ лемдизь и "мокшэрзянь Лёнротокс" (П. Равила) и "мокшэрзянь литературань эсь раскень юртнэнь кастыцякс" (П. Домокош). 
 1872-це иестэ Макаронь максызь тонавтнеме Шераутонь ушодкс школас, Цярмунонть эйстэ сисем вайгельпеть. Тонавтнесь вадрясто. Вана кодамо питне марто прядызе цёрынесь те школанть. Чуважтнэнь койсэ Макаронь фамилиязо сёрмадовсь тетянзо лемсэ. Истя Макар Кобаев теевсь Евсевьевекс.
 
 1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды сонзэ саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо [[рузонь кель|рузокс]], [[печкасонь кель|татарокс]], [[ветькень кель|чуважокс]]. Содась лия кельтькак.
