--- a/Баганя_веле_(Шенталань_буе).mw
+++ b/Баганя_веле_(Шенталань_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Баганя веле''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс|Самарань ёнкссо]].
+'''Баганя веле''', лиякс: '''Багана<ref name="Журнал «Странник»">Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.{{ref-myv}}, {{ref-de}}</ref>''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс|Самарань ёнкссо]].
 
 == Веленть лемденть  ==
 
@@ -70,7 +70,7 @@
 == Веленть эрямозо  ==
 2014 иень [[ацамковонь 5 чи]]стэ Баганя веле ютась эрзянь келень ды литературань коряс олимпиада ды эрзянь келень тонавтыцятнень ютксо пелькстамо<ref> [http://chilisema.ru/upload/iblock/86a/1-15-ilovepdf-compressed.pdf  БАГАНЯНЬ ШКОЛАСО ЭРЗЯНЬ ПОКШ ЧИ {{ref-myv}}]</ref>.
 
-== Сёрм.: ==
+==  Лисьм.: ==
 <references />
 
 
