*Empty MediaWiki Message*

--- a/Шантала_(Кошкинань_буе).mw
+++ b/Шантала_(Кошкинань_буе).mw
@@ -59,14 +59,14 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Шантала''' ({{lang-ru|с. Степная Шентала}}) — эрзянь веле  [[Кошкинань буе Самарань ёнксcо|Кошкинань буесэ]] [[Самарань ёнкс|Самарань ёнкссо]] [[Россия Мастор|Россиянь Масторсо]]. 
+'''Шантала<ref name="Mordwinische Volksdichtung_VI"/>''', лиякс: '''Степной Шентала<ref name="Mordwinische Volksdichtung_VI">Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura. ISBN 951-9019-22-7 {{ref-myv}}, {{ref-de}}</ref>''' ({{lang-ru|с. Степная Шентала}}) — эрзянь веле  [[Кошкинань буе Самарань ёнксcо|Кошкинань буесэ]] [[Самарань ёнкс|Самарань ёнкссо]] [[Россия Мастор|Россиянь Масторсо]]. 
 
 Велесь ашти  Кармалы лей ды Камышлей лейтнень чиресэ.
 
 == Эрямо пингестэнзэ ==
 == Содавикс ломать ==
 
-== Сёрм. ==
+== Лисьм. ==
 <references />
 
 [[Category:Самарань ёнксонь велеть|Ш]]
