*Empty MediaWiki Message*

--- a/Баганя_веле_(Шенталань_буе).mw
+++ b/Баганя_веле_(Шенталань_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Баганя веле''', лиякс: '''Багана<ref name="Mordwinische Volksdichtung_VI">Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.{{ref-myv}}, {{ref-de}}</ref>''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс|Самарань ёнкссо]].
+'''Баганя веле''', лиякс: '''Багана<ref name="Mordwinische Volksdichtung_VI">Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura. ISBN 951-9019-22-7 {{ref-myv}}, {{ref-de}}</ref>''' ({{Lang-ru|Багана}}) — эрзянь веле, [[Шенталань буе Самарань ёнксcо|Шенталань буесэ]], [[Самарань ёнкс|Самарань ёнкссо]].
 
 == Веленть лемденть  ==
 
