*Empty MediaWiki Message*

--- a/Исаклань_буе_Самарань_ёнксcо.mw
+++ b/Исаклань_буе_Самарань_ёнксcо.mw
@@ -57,7 +57,7 @@
 *  ({{lang-ru|Мордово-Аделяково}} - {{lang-myv|[[Мордово-Аделяково (Исаклань буе)|Мордово-Аделяково]]}}) 
 *  ({{lang-ru|Мордово-Ишутино}} - {{lang-myv|[[Мордово-Ишутино (Исаклань буе)|Мордово-Ишутино]]}}) 
 *  ({{lang-ru|Нижняя Алексеевка}} - {{lang-myv|[[Нижняя Алексеевка (Исаклань буе)|Нижняя Алексеевка]]}}) 
-*  ({{lang-ru|Новый Байтермиш}} - {{lang-myv|[[Од Байтермиш (Исаклань буе)|Од Байтермиш]]}}) 
+*  ({{lang-ru|Новый Байтермиш}} - {{lang-myv|[[Од Байтермиш (Исаклань буе)|Од Байтермиш]]<ref name="Mordwinische Volksdichtung_VI">Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura. ISBN 951-9019-22-7 {{ref-myv}}, {{ref-de}}</ref>}}) 
 *  ({{lang-ru|Пригорки}} - {{lang-myv|[[Пригорки (Исаклань буе)|Пригорки]]}}) 
 *  ({{lang-ru|Средняя Алексеевка}} - {{lang-myv|[[Средняя Алексеевка (Исаклань буе)|Средняя Алексеевка]]}})
 *  ({{lang-ru|Старое Вечканово}} - {{lang-myv|[[Ташто Вечкань веле (Исаклань буе)|Ташто Вечкань веле]]}}) 
