*Empty MediaWiki Message*

--- a/Исаклань_буе_Самарань_ёнксcо.mw
+++ b/Исаклань_буе_Самарань_ёнксcо.mw
@@ -69,5 +69,6 @@
 *  ({{lang-ru|Семь Ключей}} - {{lang-myv|[[Семь Ключей (Исаклань буе)|Семь Ключей]]}}) - (эрить эрзят, украинецт)
 *  ({{lang-ru|Соксий}} - {{lang-myv|[[Соксий (Исаклань буе)|Соксий]]}}) - (эрить эрзят, рузт, ветькеть, печкаст, украинецт, башкирт)
 
-
+== Лисьм. ==
+<references />
 [[Категория:Самарань ёнксонь буетне|И]]
