витнезь цитатась: SUST 161: 232, валморось 30-цесь

--- a/Зоринэнь_Игнатий.mw
+++ b/Зоринэнь_Игнатий.mw
@@ -35,7 +35,7 @@
 Те циклантень совавтовить вечкемадо поэматне и васняяк сеть, конатнень юрост сюлмавозь од домантнень койтне-традициятне марто ды народной моротнень марто. Ташто пингстэ истямо моротнень морсилизь ансяк од ломантнень аштема кудова ([[Пиянь кудо|Пиянь кудо]], [[Роштувань кудо|Роштувань кудо]], [[Тейтерень кудо|Тейтерень кудо]]). Секскак и раськень моротнень эйсэ и Зоринэнь поэтической ёвтнематнесэ сатышка тарка саить эротической мотивтне. Мифологической мотив марто поэманзо юрс путозь аволь сынсь мифтне, а ансяк сынст геройтнень лемтне. Весе, мезе теить Пазонь лемсэ лемдезь геройтне — те масторлангонь ломантнень эрямост, талномаст. Мокшэрзянь мифтнесэ ды мифологической народной моротнесэ истямо мотивт-сюжет арасть. Зоринэнь поэмасонзо те сюжетэсь — литературной и лемдемс сонзэ народной моронь сюжетэкс а маштови. Текень сави ёвтамс и «Цёрась паро Левонтей» поэманть коряс. Сонзэ сюжетэзе аволь мифологической, но и кода Пургине ланга поэмасо, сюлмазь мифологической мотив марто.
 
 Омбоце циклань поэмасонзо, конат сюлмавозь социально-исторической тема марто, башка мель саи поэмазо «Седе икеле эринек минь Пугачёвонь пингстэ». Се, мезде корты Аника атя, моли каршо сеть содамочитнеде [[Пугачёв|Пугачёвдо]], конат ладсевсть ланганзо советской пингень историясо и художественной произведениятнесэ. Аволь стяко Зоринэнь те поэмась Паасоненэнь сборникте башка вестькак и косояк эзь печатавкшно. 
-{{Цитатань ушодома}}''«Пугачёвонь пингстэ,  минь ламо нужа неинек, сельмеведь ламо валынек, эсенек азоромок арасель, хоть и рузонь азор ульнесь. Аволь маласо сон эрясь, кисэнек эзь ризнэ».''{{Цитатань пе}}- сёрмады Зорин поэманть ушодкссо.
+{{Цитатань ушодома}}''«Седикеле эринек<br/> минь Пугачонь пингева<br/> ламо нужа неинек<br/> ламо сельведь валынек<br/> инязормок арасель<br/> кирдицямок эсь ульне<br/> инязорось кош ульнесь<br/> сеяк рузонь инязор<br/> а маласо сон эриль<br/> иневедень томбале<br/> минек эйстэ а содыль<br/> минек кисэ а ризныль».''{{Цитатань пе}}- сёрмады Зорин поэманть ушодкссо.
 
 Игнатий Зоринэнь шкинемасо неявикс тарка саить од ломанень бытовой темадо сёрмадозь лирической поэманзо. Сыненст кода и лия циклань поэмазонзо совавтозь мокшэрзянь койтнень-кирдатнень кисэ ризнэмась. Но нетне ёвкстнэнь сюжетсэ сеедьстэ вастневи пеедькшнема, а таркат-таркат и поэтической сатирань тюс.
 
