*Empty MediaWiki Message*

--- a/Учаевень_Роман_Федорович.mw
+++ b/Учаевень_Роман_Федорович.mw
@@ -1,4 +1,4 @@
-Роман Фёдорович Учаев чачсь Саратовской губерниянь Сухой Карбулак эрзянь покш велесэ. Кемгавтово иесэ сиведизь важодеме лездыцякс велень лавочникенень лавкас, мейле тусь Сарстов ошов, косо мусь важодема тарка сюпав бояронь кондитерскойсэ.
+<strong>Роман Фёдорович Учаев</strong> чачсь Саратовской губерниянь Сухой Карбулак эрзянь покш велесэ. Кемгавтово иесэ сиведизь важодеме лездыцякс велень лавочникенень лавкас, мейле тусь Сарстов ошов, косо мусь важодема тарка сюпав бояронь кондитерскойсэ.
 
 Учаевень ульнесь покш мелезэ тонавтнемс. Сон прядсь велень кавто школат, вейкесь -- Карбулаксо, омбоцесь --теке уездэнь Юрьевка велень грамматикань кавто иеть. Теде башка тонавтнесь церковно-приходской школасояк, косо мейле савсь тензэ важодемс тонавтыцякс. Содамочинзэ кастомасо лездась тензэ "эсь прянь тонавтомась". "Чить тонавтан пакшат, а веть тонавтнян монсь". 
 
