--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -84,7 +84,7 @@
 *  [[Суняйкин, Виктор Тихонович|Виктор Суняйкин]]<ref name="МРОКМ им. И.Д. Воронина_К 65-летию мастера">[http://www.mrkm.ru/news/?id=392 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 65-летию мастера] {{ref-ru}}</ref> — чувтосто керсиця
 *  [[Сущинский, Владимир Александрович|Владимир Сущинский]]<ref name="МРОКМ им. И.Д. Воронина_В.А. Сущинский">[http://www.mrkm.ru/news/?id=389 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». В.А. Сущинский - фронтовой кинооператор] {{ref-ru}}</ref> — киноператор
 
-==Веленть эрямозо==
+==Ошонть эрямозо==
 
 == Лисьм.: ==
 <references />
