*Empty MediaWiki Message*

--- a/Петроской_ош.mw
+++ b/Петроской_ош.mw
@@ -58,7 +58,7 @@
  | сайт                   = http://Петрозаводск.рф/
  |язык сайта              = ru
 }}
-'''Петроской ош''' - [[Карелэнь Республикась|Карелэнь Республикань]] прявтошось.
+'''Петроской ош''' ({{lang2|fi|krl|Petroskoi}}, {{lang-vep|Petroskoi эли Zavod}}, {{Lang-ru|Петрозаводск}}) — [[Карелэнь Республикась|Карелэнь Республикань]] прявтошось.
 
 [[Категория:Россия Масторонть ошт]]
 [[Категория:Россия Масторонть масторпелькстнэ]]
