*Empty MediaWiki Message*

--- a/Учаевень_Роман_Федорович.mw
+++ b/Учаевень_Роман_Федорович.mw
@@ -1,3 +1,27 @@
+{{Ломанесь
+ |лем                  = Учаевень Роман Федорович
+ |оригинальной лем      = 
+ |чачома лем         = 
+ |артовкс              = 
+ |артовксонть покшолмазо   = 
+ |артовксонть эйсте =  
+ |важодема ёрокчизе     = валморонь ладсий, ёвксонь морыця-лациця
+ |чачома чись          = 
+ |чачома тарка         = {{ЧачомаТарка|)}}
+ |гражданство            = {{Масторкоцт|Россиянь Империя}}
+ |подданство           = 
+ |кулома чись          = 
+ |кулома тарка         = {{КуломаТарка|}}
+ |тетязо               = 
+ |авазо                = 
+ |мирдезэ              = 
+ |низэ                 = 
+ |эйкакшонзо           = 
+ |казнеть ды медальть  = 
+ |автограф             = 
+ |вальма                = 
+ |википурнавкс         = 
+}}
 <strong>Роман Фёдорович Учаев</strong> чачсь Саратовской губерниянь Сухой Карбулак эрзянь покш велесэ. Кемгавтово иесэ сиведизь важодеме лездыцякс велень лавочникенень лавкас, мейле тусь Сарстов ошов, косо мусь важодема тарка сюпав бояронь кондитерскойсэ.
 
 Учаевень ульнесь покш мелезэ тонавтнемс. Сон прядсь велень кавто школат, вейкесь -- Карбулаксо, омбоцесь --теке уездэнь Юрьевка велень грамматикань кавто иеть. Теде башка тонавтнесь церковно-приходской школасояк, косо мейле савсь тензэ важодемс тонавтыцякс. Содамочинзэ кастомасо лездась тензэ "эсь прянь тонавтомась". "Чить тонавтан пакшат, а веть тонавтнян монсь". 
