*Empty MediaWiki Message*

--- a/Учаевень_Роман_Федорович.mw
+++ b/Учаевень_Роман_Федорович.mw
@@ -5,9 +5,9 @@
  |артовкс              = 
  |артовксонть покшолмазо   = 
  |артовксонть эйсте =  
- |важодема ёрокчизе     = валморонь ладсий, ёвксонь морыця-лациця
+ |важодема ёрокчизе     =
  |чачома чись          = 
- |чачома тарка         = {{ЧачомаТарка|)}}
+ |чачома тарка         = {{ЧачомаТарка|Сухой Карбулак}}
  |гражданство            = {{Масторкоцт|Россиянь Империя}}
  |подданство           = 
  |кулома чись          = 
