*Empty MediaWiki Message*

--- a/Учаевень_Роман_Федорович.mw
+++ b/Учаевень_Роман_Федорович.mw
@@ -8,8 +8,7 @@
  |важодема ёрокчизе     =
  |чачома чись          = 
  |чачома тарка         = {{ЧачомаТарка|Сухой Карбулак}}
- |гражданство            = {{Масторкоцт|Россиянь Империя}}
- |подданство           = 
+ |кедьалксчи             = {{Масторкоцт|Россиянь Империя}}
  |кулома чись          = 
  |кулома тарка         = {{КуломаТарка|}}
  |тетязо               = 
