--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -64,10 +64,10 @@
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. II. Band. SUST 81. Helsinki 1939.
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. III. Band. SUST 84. Helsinki 1941. 
 * Mordwinische Volksdichtung. Herausgeg. u. übers. von Paavo Ravila. IV. Band. SUST 91. Helsinki 1947
-* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
-* Mordwinische Volksdichtung. Gesammelt on Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt von Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. V. Band. SUST 161. Helsinki 1977, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt von Ignatij Zorin, Durchgesehen u. transkribiert von Heikki Paasonen, übers. von Kaino Heikkilä u. Paavo Ravila, Herausgeg von Martti Kahla. VI. Band. SUST 162. Helsinki 1977, Suomalais-Ugrilainen Seura.
 * Mordwinische Volksdichtung VII. Band. SUST 176. Helsinki 1980, Suomalais-Ugrilainen Seura.
-* Mordwinische Volksdichtung VIII. Band. SUST 178. Helsinki 1981, Suomalais-Ugrilainen Seura.
+* Mordwinische Volksdichtung. Gesammelt von Roman Učaev, Sergej Čigin u. Vladimir Savkin, Durchgesehen von Heikki Paasonen, transkribiert u. ũbers. von Kaino Heikkilä, Herausgeg. von Martti Kahla. VIII. Band. SUST 178. Helsinki 1981, Suomalais-Ugrilainen Seura.
 * Федотов М. Р. «Исследователи чувашского языка». Чебоксары, 1987. 
 * [http://www.ling.helsinki.fi/~rueter/PaasonenMW.shtml The Dialect Dictionary of the Mordvin Languages Based on the Heikki Paasonen Materials]
 
