--- a/Учаевень_Роман_Федорович.mw
+++ b/Учаевень_Роман_Федорович.mw
@@ -28,7 +28,13 @@
 1905--1907 иетнестэ лездась А. Шахматовнень кочксемс Саратовань велетнева эсь раськень морот, ёвкст, фольклоронь лия жанрань тевть, конат 1910-це иестэ лиссть А. Шахматовонь "Этнографический сборник" книгасонзо. Раськень моротнень-ёвкстнэнь ютксо сборниксэнть печатазельть Учаевень эсензэ произведениянзояк: лецнеманзо, литературной ёвтнеманзо и мокшэрзятнень эрямодост-аштемадост арсеманзо. Учаевень эсь эрямодо лецтнеманзо А. Шахматовонь сборникс совавтозельть "Жизнеописание Р.Ф. Учаева" лем ало, а текстнэ максозельть эрзянь кельсэ и рузокс ютавтозь. Неть лецтнематнестэ мокшэрзянь литературасо ушодови башка ломань ланга сермадомань традициятне. Не жанратнень ютксо художественной формакс карми улеме Учаевень эсь эрямодонзо лецтнематне, конат жанрань ёндо кармить улеме художественно-документальной очеркекс: мокшэрзянь литературасо васенцеть.
 Учаевень ёвтнемасо историзмась ламо ёндо сюлмавозь фольклорной историзманть марто: ломаютконь и кудоютконь тевтне эйсэст невтевить раськень символика вельде. Улить сонзэ сёрмадовкснэсэ истят ёвтнематкак, конат и сюжетной и идейной ёндо пек малавикст реализмань прозантень.
 
-Учаев ульнесь Х. Паасоненеэнь лездыцянзо ютксо, конат пурнасть мокшэрзянь фольклорной материал. Учаевень эсь раськень эрямо-коень материалонзо пурназелть Саратовской губерниянь эрзянь велетнестэ. Текстнэнь рузонь кельс ютавтынзе сонсь. Печатазельть Mordwinische volksdichtung VII-це томсонть, кона лиссь Хельсинкисэ 1980-це иестэ. Тесэ ламо материал эрзянь свадьбадо чиямосто меельце чис, озкст шкань ды таркань коряс, кудоютконь озкст ды кулыця марто сюлмавозь койтне-кирдатне, кода лайшематнень истя калмамонь ды поминамонь тевтне. Весе текстнэ марто максы пек домка ды паро толковамот койтнень-кирдатнень коряс.  
+Учаев ульнесь [[Паасонен Хейкки|Х. Паасоненеэнь]] лездыцянзо ютксо, конат пурнасть мокшэрзянь фольклорной материал. Учаевень эсь раськень эрямо-коень материалонзо пурназелть Саратовской губерниянь эрзянь велетнестэ. Текстнэнь рузонь кельс ютавтынзе сонсь. Печатазельть Mordwinische volksdichtung VII-це томсонть, кона лиссь Хельсинкисэ 1980-це иестэ. Тесэ ламо материал эрзянь свадьбадо чиямосто меельце чис, озкст шкань ды таркань коряс, кудоютконь озкст ды кулыця марто сюлмавозь койтне-кирдатне, кода лайшематнень истя калмамонь ды поминамонь тевтне. Весе текстнэ марто максы пек домка ды паро толковамот койтнень-кирдатнень коряс.  
 
 Неень шкань чарькодемасо/арсемасо Учаевень Роман Федорович сёрмадыекс арасель. Сон ульнесь истямо литератор, конань вельде мокшэрзянь литературасо ансяк-ансяк ушодкшновсть келень-валонь реалистической васенце жанратне-койтне. Ламось сонзэ наследиясонзо ансяк эскелькс алкуксчинь ёнов, васенце варчавкс. Те варчавксось ламо ёндо сюлмавсь раськень жанратнень ды поэтиканзо марто.
 Роман Фёдорович Учаевень сёрмадовксонзо, кода и лия мокшэрзянь аволь литературной паследиясь/сатотовксось те шкас апак совавто литературанок историяс, ламось сонзэ и сонзэ кондямо литературань произведениясо лововсь аволь литературань явлениякс. Неть ёвтнематнень и лия сёрмадовкстнэнь ловилизь то фольклорной творчествакс, то келень коряс текстэнь невтемакс.
+
+==Сёрм.:==
+* Mordwinische Volksdichtung. Gesammelt von Roman Učaev, Sergej Čigin u. Vladimir Savkin, Durchgesehen von Heikki Paasonen, transkribiert u. ũbers. von Kaino Heikkilä, Herausgeg. von Martti Kahla. VIII. Band. SUST 178. Helsinki 1981, Suomalais-Ugrilainen Seura.
+
+[[Category:Эрзякс кортыцят|У]]
+[[Category:Эрзянь кель|У]]
