*Empty MediaWiki Message*

--- a/Умбрав.mw
+++ b/Умбрав.mw
@@ -51,9 +51,9 @@
 * ({{Lang-lat|Rumex hydroldpathum Huds.}}, {{lang-ru| ''Щавель прибрежсный''}})  - '''''чирень умбрав'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Rwnex longifolius DC.}}, {{lang-ru| ''Щавель длиннолистный''}})  - '''''кувака лопа умбрав'''''<ref name="Русско-эрзянский ботанический"/>. 
 * ({{Lang-lat|Rúmex críspus}}, {{lang-ru| ''Щавель курчавый''}})  - '''''[[Атякшонь морамо|атякшонь морамо]]'''''<ref name="Русско-эрзянский ботанический"/>. 
-
+* ({{Lang-lat|Rumex Hydrolapathum}}, {{lang-ru| ''Вороньи пучки''}})  - '''''элди чурамъ начька'''''<ref name="Н. И. Анненковъ">Н. И. Анненковъ. Ботаническій словарь. — СПб.: Имп. Академія наукъ, 1878. — С. 306{{ref-ru}}</ref>
 == Содамоёвкст ==
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Категория:Биология|У]]
