--- a/Гуеньпочко.mw
+++ b/Гуеньпочко.mw
@@ -46,7 +46,7 @@
 Кавтоиень тикшесь покш [[нетькс]] марто, [[якстере|якстерьди]] петнявкс марто. Лопанзо [[колмо]]ксть толгавт. Тикшесь ядов, кой-кить сёрмадыть геуньпочкосо ульнесь куловтозь [[Сократ]]<ref>[http://bibliotekar.ru/haron/96.htm «Энциклопедия Смерти. Хроники Харона» Часть 2: Словарь избранных Смертей» на сайте Библиотекарь.ru]</ref>.  
 
 == Тикшень лемтне ==
-* ({{Lang-lat|IConīum maculātum}}, {{lang-ru| ''Болиголо́в пятни́стый''}})  - '''''[[тешксэв гуеньпочко]]'''''<ref name="Русско-эрзянский ботанический"/>. 
+* ({{Lang-lat|Conīum maculātum}}, {{lang-ru| ''Болиголо́в пятни́стый''}})  - '''''[[тешксэв гуеньпочко]]'''''<ref name="Русско-эрзянский ботанический"/>.
 
 == Фотокувт== 
 <gallery>
