*Empty MediaWiki Message*

--- a/Гуеньпочко.mw
+++ b/Гуеньпочко.mw
@@ -39,6 +39,7 @@
 | grin             = 
 | ipni              = 
 }}
+{{Лия смустьтне|Гуеньпочко (смустьтне)}}
 '''Гуеньпочко<ref name="Русско-эрзянский ботанический">Русско-эрзянский ботанический словарь (названия сосудистых): Ок.  1600 назв.  /А. М. Гребнева, В. В. Лещанкина.— Саранск: Тип. «Крас. Окт.», 2002.— 60 с.— Рус, эрзян. ISBN 5-7493-0433-7.,{{ref-ru}},{{ref-myv}}</ref>''' ({{lang-la|Conīum}}, {{lang-ru| ''Болиголо́в'', или ''Омег''}}) — кавтоиень [[тикше]]нь касовкс Амбрелань семиястонть (''Apiaceae'').  
 
 Буень [[Латинэнь кель|латинэнь лемесь]] саеви {{lang-grc|κόννος}} — «велявкс», пряс велякадат, кодак [[ярсамопель|ярсат]] видьмензэ. Касыть [[Европань Мастор|Европасо]], [[Вишка Азия]]со ды Сибирьга. 
