--- a/Базарсызганонь_буе.mw
+++ b/Базарсызганонь_буе.mw
@@ -1,4 +1,47 @@
-[[Артовкс:Coat of arms of Bazarnosyzgansky Raion.png|right|100px]]
+{{Регион
+ | Цвет1                          = {{Цвет|Россия}}
+ | Эрзянь лем                     = Базарсызганонь буе
+ | Эсьлем                         = {{lang-ru|}}
+ | Герб                           = 
+ | Коцт                           = 
+ | Гимн                           = 
+ | Мастор                         = {{RUS}}
+ | lat_dir                        = 
+ | lat_deg                        = |lat_min = |lat_sec =
+ | lon_dir                        = 
+ | lon_deg                        = |lon_min = |lon_sec =
+ | region                         = 
+ | type                           = 
+ | уровень                        = 
+ | CoordScale                     = 
+ | Статус                         = [[Муниципальной буе]]
+ | Ашти                           = [[Ульянонь ёнкс]]со
+ | Включает                       = 
+ | Прявтош                        = 
+ | Образование                    = 
+ | Упразднение                    = 
+|Глава                            = 
+  |Название главы                  = 
+ |Глава2                           = 
+  |Название главы2                 = Администрациянь прявт
+ | Карта                          = 
+ | Размер карты                   = 
+ | Карта административной единицы = 
+ | Размер карты ае                = 
+ | Часовой пояс                   = {{MSK+0}}
+ | Аббревиатура                   = 
+ | ISO                            = 
+ | FIPS                           = 
+ | Телефонный код                 = 
+ | Почтовые индексы               = 
+ | Интернет-домен                 = 
+ | Код автомобильных номеров      =
+ | Сайт                           = 
+ | Категория в Commons            = 
+ | Примечания                     = 
+ | Название параметра1            = [[ОКАТО]]
+ | Параметр1                      = {{ОКАТО|}}
+}}
 '''Базарсызганонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Базаронь Сызган]]. Буень масторонь покшолмазо 825,2 вп². Эрицятнеде — 10,9 тёжат, [[эрзят]] 7 %, [[рузт]] 89 %, [[печкаст]] 22 %, [[ветькеть]] 2,5 %.
 
 {{Ульянонь ёнксонь буетне}}
