*Empty MediaWiki Message*

--- a/Базарсызганонь_буе.mw
+++ b/Базарсызганонь_буе.mw
@@ -1,7 +1,7 @@
 {{Регион
  | Цвет1                          = {{Цвет|Россия}}
  | Эрзянь лем                     = Базарсызганонь буе
- | Эсьлем                         = {{lang-ru|}}
+ | Эсьлем                         = {{lang-ru|Базарносызганский район}}
  | Герб                           = 
  | Коцт                           = 
  | Гимн                           = 
