--- a/Сэтот.mw
+++ b/Сэтот.mw
@@ -34,13 +34,19 @@
  |совавты           = 
  |чачома            = 
 }}
-[[Артовкс:KuningriikM.JPG|thumb|200px|Сето Инязоронь кочкома, 2006 иестэ]]
 '''Сэтот''' ({{lang-ru|Сету}}, ({{lang-et|Setud}}) — [[Суоми-угрань Масторт|суоми-угрань]] раське Уралонь покш семияньте совиця, кона эри [[Эстэнь Мастор|Эстэнь Масторсо]] ([[Вырумаа ёнкс]]о ды [[Пылвамаа ёнкс]]о) ды Россиянь [[Псковонь ёнкс]]о. 
-
 
 Эсист масторост лемдить [[Сетомаа]], ули эсист раськень коцтост.
 Раськенть покшолмазо 10 000 ломанть, эйстэст Россиясо эрить ансяк 197 (2010 ие), 214 (2002 ие). Мастопрявт келест конатасонть кортыть - [[Эстэнь кель|эстэнь]], [[Эстэнь кель|лембеёнксонь эстэнь]] эли [[Выронь кель|выронь]], конат [[Суоми-угрань кельть|суоминь-угрань келень семиястонть]].
 
+<gallery>
+Radaja Seto Festival (2016) - 115.jpg
+Radaja Seto Festival (2016) - 117.jpg
+Radaja Seto Festival (2016) - 120.jpg
+Radaja Seto Festival (2016) - 048.jpg
+Radaja Seto Festival (2016) - 102.jpg
+Radaja Seto Festival (2016) - 024.jpg
+</gallery>
 
 == Сёрм.: ==
 <references />
