--- a/Базарсызганонь_буе.mw
+++ b/Базарсызганонь_буе.mw
@@ -42,7 +42,7 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|}}
 }}
-'''Базарсызганонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Базаронь Сызган]]. Буень масторонь покшолмазо 825,2 вп². Эрицятнеде — 10,9 тёжат, [[эрзят]] 7 %, [[рузт]] 89 %, [[печкаст]] 22 %, [[ветькеть]] 2,5 %.
+'''Базарсызганонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Базаронь Сызган]]. Буень масторонь покшолмазо 825,2 вп². Эрицятнеде — 10,9 тёжат: [[эрзят]] 7 %, [[рузт]] 89 %, [[печкаст]] 22 %, [[ветькеть]] 2,5 %.
 
 {{Ульянонь ёнксонь буетне}}
 
