--- a/Алашань_тикше.mw
+++ b/Алашань_тикше.mw
@@ -1,6 +1,46 @@
-[[Артовкс:Parsley bush.jpg|thumb|250px|Алашань тикше]]
+{{Таксономиясь
+|name =Алашань тикше
+|latin =Petroselinum alba
+|image file =Parsley bush.jpg
+|image descr =Алашань тикше (''Petroselinum alba'')
+|superregnum =
+|subregnum = 
+|раздел =
+|superphylum =
+|phylum = 
+|subphylum =
+|superdivisio =
+|divisio =
+|subdivisio = 
+|superclassis =
+|classis = 
+|subclassis =
+|infraclassis =
+|superordo =
+|ordo = 
+|subordo =
+|infraordo =
+|superfamilia =
+|familia = 
+|subfamilia =
+|tribus =
+|genus =
+|subgenus =
+|species =
+|subspecies =
+|unranked =
+|range map =
+| wikispecies       =Conium
+| commons           =Category:Conium
+| iucn              = 
+| itis              = 
+| ncbi              = 
+| eol               = 
+| grin             = 
+| ipni              = 
+}}
 
-'''Алашань тикше (Алашань анис)''' (лат. ''Petroselinum alba'') — ламо иень перть касыця тикше зонтичноень семиясто. Ундоксозо эчке. Нетьксэнзэ сэрей прясто рацяня лопанзо човинеть, пек керсевезь. 
+'''Алашань тикше (Алашань анис)''' ({{lang-la|Petroselinum alba}}, {{lang-ru| ''Петрушка кудрявая''}}) — ламо иень перть касыця тикше зонтичноень семиясто. Ундоксозо эчке. Нетьксэнзэ сэрей прясто рацяня лопанзо човинеть, пек керсевезь. 
 Нетьксэнть прясо зонтикень кондямо цецянь пурнавкс. Цецянзо [[ашо|ашот]], али ашола-[[якстере|якстереть]]. 
 
 Те — ядов тикше, сонзе эйстэ ормалгады кодоютконь ракшатне. Касы лей чирева, куракш юткова.
