--- a/Алашань_тикше.mw
+++ b/Алашань_тикше.mw
@@ -30,8 +30,8 @@
 |subspecies =
 |unranked =
 |range map =
-| wikispecies       =Conium
-| commons           =Category:Conium
+| wikispecies       =Petroselinum
+| commons           =Category:Petroselinum
 | iucn              = 
 | itis              = 
 | ncbi              = 
@@ -40,10 +40,12 @@
 | ipni              = 
 }}
 
-'''Алашань тикше (Алашань анис)''' ({{lang-la|Petroselinum alba}}, {{lang-ru| ''Петрушка кудрявая''}}) — ламо иень перть касыця тикше зонтичноень семиясто. Ундоксозо эчке. Нетьксэнзэ сэрей прясто рацяня лопанзо човинеть, пек керсевезь. 
-Нетьксэнть прясо зонтикень кондямо цецянь пурнавкс. Цецянзо [[ашо|ашот]], али ашола-[[якстере|якстереть]]. 
+'''Алашань тикше (Алашань анис)''' ({{lang-la|Petroselinum alba}}, {{lang-ru| ''Петрушка кудрявая''}}) — ламо иень перть касыця тикше зонтичноень семиясто. 
 
-Те — ядов тикше, сонзе эйстэ ормалгады кодоютконь ракшатне. Касы лей чирева, куракш юткова.
+
+Ундоксозо эчке. Нетьксэнзэ сэрей прясто рацяня лопанзо човинеть, пек керсевезь. Нетьксэнть прясо зонтикень кондямо цецянь пурнавкс. Цецянзо [[ашо|ашот]], али ашола-[[якстере|якстереть]]. 
+
+Те — ядов тикше, сонзе эйстэ ормалгады кодоютконь [[ракшат]]не. Касы [[лей]] чирева, куракш юткова.
 
 == Сёрм.: ==
 * Р.Н. Бузакова, Тикшень валкс - Саранск: Мордовской кн. изд-ась, 1996. - 144.с. ISBN 5-7595-0963-2
