*Empty MediaWiki Message*

--- a/1697_ие.mw
+++ b/1697_ие.mw
@@ -4,7 +4,7 @@
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-* [[медьковонь 6 чи]]стэ -  [[Карл VII (Ине Римонь Империянь императорось)|Карл VII]], Ине Римонь Империянь императорось
+* [[Умарьковонь 6 чи]]стэ -  [[Карл VII (Ине Римонь Империянь императорось)|Карл VII]], Ине Римонь Империянь императорось
 
 == Кулость ==
 
