--- a/Чилиянь_песо.mw
+++ b/Чилиянь_песо.mw
@@ -1,4 +1,4 @@
 [[Артовкс:CLP 100 2001.svg|кенжешка]]
-'''Чилиянь песо''' (ярмаконь тешкс — $, банконь кодось: CLP) — эсьлемпелень ярмак [[Чили Мастор|Чили]]
+'''Чилиянь песо''' (ярмаконь тешкс — $, банконь кодось: CLP) — эсьлемпелень ярмак [[Чили Мастор|Чилисэ]].
 
 [[Категория:Чили Мастор]]
