*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -3,7 +3,7 @@
 <noinclude>{{docpage}}</noinclude>
 == Заготовка ==
 <pre>
-{{Валюта
+{{Ярмак
  |Название              = <!-- Наименование валюты; не заполняется, если заполнено поле «ОКВ-ru» -->
  |Оригинальное название = <!-- Наименование валюты на официальном языке эмитента -->
  |Код языка             = <!-- Двухбуквенный код языка эмитента в стандарте ISO 639-1 -->
@@ -90,7 +90,7 @@
 ! width="30%"| ...даёт
 |}
 
-{{Валюта
+{{Ярмак
  |Название              = Евро
  |Оригинальное название = Ευρώ
  |Код языка             = el
@@ -120,7 +120,7 @@
 }}
 
 <pre style="width:65%">
-{{Валюта
+{{Ярмак
  |Название              = Евро
  |Оригинальное название = Ευρώ
  |Код языка             = el
@@ -154,7 +154,7 @@
 ! width="30%"| ...даёт
 |}
 
-{{Валюта
+{{Ярмак
  |Название              = Евро
  |Оригинальное название = Ευρώ
  |Код языка             = el
@@ -180,7 +180,7 @@
 }}
 
 <pre style="width:65%">
-{{Валюта
+{{Ярмак
  |Название              = Евро
  |Оригинальное название = Ευρώ
  |Код языка             = el
