--- a/ЛопаПарцун:Ярмак.mw
+++ b/ЛопаПарцун:Ярмак.mw
@@ -1,13 +1,13 @@
 {| class="infobox geography" style="width: {{#if: {{{Ширина|}}}|{{{Ширина}}}px|350px }};"
 
-<!-- Название на русском языке -->
-! colspan="2" align="center" style="background-color: #CCCC66; font-size: 120%; color: #fff;" | {{#if: {{{Название|}}}|{{{Название|}}}|{{{ОКВ-ru|}}} <small>''{{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}''</small> }}
+<!-- Лемесь эрзянь кельсэ -->
+! colspan="2" align="center" style="background-color: #CCCC66; font-size: 120%; color: #fff;" | {{#if: {{{Лем|}}}|{{{Лем|}}}|{{{ОКВ-ru|}}} <small>''{{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}''</small> }}
 
 <!-- Названия на языке эмитента и официальных языках стандарта ISO 4217 -->
 |-
-{{#if: {{{Оригинальное название|}}}{{{ISO-en|}}}{{{ISO-fr|}}} |
+{{#if: {{{Эсьлем|}}}{{{ISO-en|}}}{{{ISO-fr|}}} |
 {{!}} colspan="2" style="background-color: #CCCC66; font-size: 100%; color: #fff; text-align: center;" {{!}} 
-{{#if: {{{Оригинальное название|}}} | '''''{{{Оригинальное название|}}} {{#if: {{{Код языка|}}}|{{ref-{{{Код языка}}}}} }}''''' {{#if: {{{ISO-en|}}} | <br /> '''''{{{ISO-en}}} {{ref-info|англ.|на английском языке в стандарте ISO 4217}}''''' }} {{#if: {{{ISO-fr|}}} | <br /> '''''{{{ISO-fr}}} {{ref-info|фр.|на французском языке в стандарте ISO 4217}}''''' }} {{#if: {{{Название|}}}|{{#if: {{{ОКВ-ru|}}}| <br />'''''{{{ОКВ-ru|}}} {{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}'''''| }}| }} | {{#if: {{{ISO-en|}}} | '''''{{{ISO-en}}} {{ref-info|англ.|на английском языке в стандарте ISO 4217}}''''' }} {{#if: {{{ISO-fr|}}} | <br /> '''''{{{ISO-fr}}} {{ref-info|фр.|на французском языке в стандарте ISO 4217}}''''' }} {{#if: {{{Название|}}}|{{#if: {{{ОКВ-ru|}}} | <br />'''''{{{ОКВ-ru|}}} {{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}''''' | }}| }}
+{{#if: {{{Эсьлем|}}} | '''''{{{Эсьлем|}}} {{#if: {{{Код языка|}}}|{{ref-{{{Код языка}}}}} }}''''' {{#if: {{{ISO-en|}}} | <br /> '''''{{{ISO-en}}} {{ref-info|англ.|на английском языке в стандарте ISO 4217}}''''' }} {{#if: {{{ISO-fr|}}} | <br /> '''''{{{ISO-fr}}} {{ref-info|фр.|на французском языке в стандарте ISO 4217}}''''' }} {{#if: {{{Лем|}}}|{{#if: {{{ОКВ-ru|}}}| <br />'''''{{{ОКВ-ru|}}} {{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}'''''| }}| }} | {{#if: {{{ISO-en|}}} | '''''{{{ISO-en}}} {{ref-info|англ.|на английском языке в стандарте ISO 4217}}''''' }} {{#if: {{{ISO-fr|}}} | <br /> '''''{{{ISO-fr}}} {{ref-info|фр.|на французском языке в стандарте ISO 4217}}''''' }} {{#if: {{{Лем|}}}|{{#if: {{{ОКВ-ru|}}} | <br />'''''{{{ОКВ-ru|}}} {{ref-info|рус.|на русском языке в Общероссийском или Общесоюзном классификаторе валют}}''''' | }}| }}
 }}}}
 
 <!-- Изображения и подписи к ним -->
@@ -294,10 +294,10 @@
 {{!}} colspan="2" style="background-color: #ffffff; text-align: left; vertical-align:top;" {{!}} {{примечания|group={{{ГруппаСносок}}}}}
 }}
 
-<!-- Викисклад -->
+<!-- Википурнавкс -->
 |-
-{{#if: {{{Викисклад|}}} |
-{{!}} colspan="2" style="background-color: #CCCC66; color: #fff; text-align: center;" {{!}}[[File:Commons logo optimized.svg|14px]] '''[[commons:{{{Викисклад}}}|{{#if: {{{ОКВ-ru|}}}|{{{ОКВ-ru}}}|{{{Название|{{{Викисклад|}}}}}} }}]] на [[Викисклад]]е''' |
+{{#if: {{{Википурнавкс|}}} |
+{{!}} colspan="2" style="background-color: #CCCC66; color: #fff; text-align: center;" {{!}}[[File:Commons logo optimized.svg|14px]] '''[[commons:{{{Википурнавкс}}}|{{#if: {{{ОКВ-ru|}}}|{{{ОКВ-ru}}}|{{{Лем|{{{Википурнавкс|}}}}}} }}]] [[Википурнавкс]]со''' |
 {{!}} colspan="2" style="background-color: #CCCC66; color: #fff; text-align: center;" {{!}}
 }}
 
