*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -4,8 +4,8 @@
 == Заготовка ==
 <pre>
 {{Ярмак
- |Название              = <!-- Наименование валюты; не заполняется, если заполнено поле «ОКВ-ru» -->
- |Оригинальное название = <!-- Наименование валюты на официальном языке эмитента -->
+ |Лем              = <!-- Наименование валюты; не заполняется, если заполнено поле «ОКВ-ru» -->
+ |Эсьлем = <!-- Наименование валюты на официальном языке эмитента -->
  |Код языка             = <!-- Двухбуквенный код языка эмитента в стандарте ISO 639-1 -->
  |ОКВ-ru                = <!-- Наименование валюты на русском языке в соответствии с Общероссийским или Общесоюзным классификатором валют -->
  |ISO-en                = <!-- Наименование валюты на английском языке в соответствии со стандартом ISO 4217 -->
@@ -51,7 +51,7 @@
  |Банкноты              = <!-- Банкноты достоинством в… -->
  |Введена               = <!-- Дата (год) введения валюты -->
  |Введена-конец         = <!-- Дата (год) объявления валюты единственным законным средством платежа -->
- |Заменила              = <!-- Название валюты, которую заменила описываемая -->
+ |Заменила              = <!-- Лем валюты, которую заменила описываемая -->
  |Хроника               = <!-- Перечень разновидностей валюты -->
  |Центробанк            = <!-- Эмиссионный центр -->
  |Центробанк_сайт       = <!-- Сайт эмиссионного центра (без http://) -->
@@ -74,7 +74,7 @@
  |Курс6                 = <!-- Обменный курс 6; при использовании шаблона [[Шаблон:Валютный курс]] несколько раз в сутки обновляется ботом -->
  |Валюта6               = <!-- Обменный курс к любой другой валюте; рекомендуется использовать для фиксированного курса к не упомянутой выше валюте -->
  |Дата                  = <!-- Дата, на которую приводится обменный курс; при использовании шаблона [[Шаблон:Валютный курс]] обновляется ботом -->
- |Викисклад             = <!-- Название страницы или категории на Викискладе, где собраны изображения -->
+ |Википурнавкс             = <!-- Лем страницы или категории на Википурнавксе, где собраны изображения -->
  |Инфляция              = <!-- Темпы инфляции -->
  |Год                   = <!-- Год, за который выводятся данные об инфляции -->
  |ГруппаСносок          = <!-- Группа для сносок, которые можно размещать непосредственно внутри шаблона -->
@@ -91,8 +91,8 @@
 |}
 
 {{Ярмак
- |Название              = Евро
- |Оригинальное название = Ευρώ
+ |Лем              = Евро
+ |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
  |Изображение           = 500_Euro.Recto.png
@@ -113,7 +113,7 @@
  |Дата                  = {{Валютный курс|EUR|Дата}}
  |Центробанк            = [[Европейский центральный банк]]
  |Центробанк_сайт       = ecb.eu
- |Викисклад             = Euro
+ |Википурнавкс             = Euro
  |Инфляция              = 10%
  |Год                   = 2013
  |ГруппаСносок          = a
@@ -121,8 +121,8 @@
 
 <pre style="width:65%">
 {{Ярмак
- |Название              = Евро
- |Оригинальное название = Ευρώ
+ |Лем              = Евро
+ |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
  |Изображение           = 500_Euro.Recto.png
@@ -143,7 +143,7 @@
  |Дата                  = {{Валютный курс|EUR|Дата}}
  |Центробанк            = [[Европейский центральный банк]]
  |Центробанк_сайт       = ecb.eu
- |Викисклад             = Euro
+ |Википурнавкс             = Euro
  |Инфляция              = 10%
  |Год                   = 2013
  |ГруппаСносок          = a
@@ -155,8 +155,8 @@
 |}
 
 {{Ярмак
- |Название              = Евро
- |Оригинальное название = Ευρώ
+ |Лем              = Евро
+ |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
  |Изображение           = 500_Euro.Recto.png
@@ -173,7 +173,7 @@
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Центробанк            = [[Европейский центральный банк]]
  |Центробанк_сайт       = ecb.eu
- |Викисклад             = Euro
+ |Википурнавкс             = Euro
  |Инфляция              = 10%
  |Год                   = 2013
  |ГруппаСносок          = b
@@ -181,8 +181,8 @@
 
 <pre style="width:65%">
 {{Ярмак
- |Название              = Евро
- |Оригинальное название = Ευρώ
+ |Лем              = Евро
+ |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
  |Изображение           = 500_Euro.Recto.png
@@ -199,7 +199,7 @@
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Центробанк            = [[Европейский центральный банк]]
  |Центробанк_сайт       = ecb.eu
- |Викисклад             = Euro
+ |Википурнавкс             = Euro
  |Инфляция              = 10%
  |Год                   = 2013
  |ГруппаСносок          = b
@@ -209,7 +209,7 @@
 Ниже представлены некоторые вспомогательные шаблоны, которые рекомендуется использовать при заполнении полей шаблона «Валюта»:
 
 {| class="wikitable" style="text-align:center; font-size:90%" width="70%"
-!rowspan="2"|Название шаблона
+!rowspan="2"|Лем шаблона
 !colspan="2"|Пример использования
 |-
 !Заготовка...
