--- a/ЛопаПарцун:Ярмак.mw
+++ b/ЛопаПарцун:Ярмак.mw
@@ -12,16 +12,16 @@
 
 <!-- Изображения и подписи к ним -->
 |-
-{{#if: {{{Изображение|}}}{{{Изображение2|}}} |
+{{#if: {{{Артовкс|}}}{{{Артовкс2|}}} |
 {{!-}}
 {{!}} colspan="2" style="background-color:#ffffff; text-align: center;" {{!}}
     {{{!}} width="100%" style="margin: 0 auto; text-align: center;"
-    {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения|}}} | background: {{{Фон_изображения}}}; }}" {{!}} [[Файл:{{{Изображение}}}|{{#if: {{{Ширина изображения|}}}|{{{Ширина изображения}}}px|{{#if: {{{Изображение2|}}}|150px|300px }} }}|{{{Подпись|}}}]]
-    {{#if: {{{Изображение2|}}} | {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения2|}}}|background: {{{Фон_изображения2}}}; }}" {{!}} [[Файл:{{{Изображение2}}}|{{#if: {{{Ширина изображения2|}}}|{{{Ширина изображения2}}}px|150px }}|{{{Подпись2|}}}]] }}
+    {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения|}}} | background: {{{Фон_изображения}}}; }}" {{!}} [[Файл:{{{Артовкс}}}|{{#if: {{{Ширина изображения|}}}|{{{Ширина изображения}}}px|{{#if: {{{Артовкс2|}}}|150px|300px }} }}|{{{Артовксонть эйстэ|}}}]]
+    {{#if: {{{Артовкс2|}}} | {{!}} style="vertical-align: middle; text-align: center; {{#if: {{{Фон_изображения2|}}}|background: {{{Фон_изображения2}}}; }}" {{!}} [[Файл:{{{Артовкс2}}}|{{#if: {{{Ширина изображения2|}}}|{{{Ширина изображения2}}}px|150px }}|{{{Артовксонть эйстэ2|}}}]] }}
     {{!-}} style="font-size: 90%;"
     {{#if: {{{Общая подпись|}}} | {{!}}colspan="2" style="background-color:#ffffff; text-align: center;"{{!}} {{{Общая подпись}}}|
-    {{#if: {{{Подпись|}}} | {{!}} {{{Подпись|}}} }}
-    {{#if: {{{Подпись2|}}} | {{!}} {{{Подпись2|}}} }}
+    {{#if: {{{Артовксонть эйстэ|}}} | {{!}} {{{Артовксонть эйстэ|}}} }}
+    {{#if: {{{Артовксонть эйстэ2|}}} | {{!}} {{{Артовксонть эйстэ2|}}} }}
     }}
     {{!}}}
 }}
