--- a/ЛопаПарцун:Ярмак%2Fdoc.mw
+++ b/ЛопаПарцун:Ярмак%2Fdoc.mw
@@ -10,11 +10,11 @@
  |ОКВ-ru                = <!-- Наименование валюты на русском языке в соответствии с Общероссийским или Общесоюзным классификатором валют -->
  |ISO-en                = <!-- Наименование валюты на английском языке в соответствии со стандартом ISO 4217 -->
  |ISO-fr                = <!-- Наименование валюты на французском языке в соответствии со стандартом ISO 4217 -->
- |Изображение           = <!-- Имя файла 1 -->
- |Изображение2          = <!-- Имя файла 2 -->
+ |Артовкс           = <!-- Имя файла 1 -->
+ |Артовкс2          = <!-- Имя файла 2 -->
  |Общая подпись         = <!-- Общая подпись к двум изображениям, если нет необходимости подписывать их по-отдельности -->
- |Подпись               = <!-- Подпись для первого изображения; не выводится, если заполнено поле "Общая подпись" -->
- |Подпись2              = <!-- Подпись для второго изображения; не выводится, если заполнено поле "Общая подпись" -->
+ |Артовксонть эйстэ               = <!-- Артовксонть эйстэ для первого изображения; не выводится, если заполнено поле "Общая подпись" -->
+ |Артовксонть эйстэ2              = <!-- Артовксонть эйстэ для второго изображения; не выводится, если заполнено поле "Общая подпись" -->
  |Ширина                = <!-- Ширина шаблона; по умолчанию 350px, но не меньше суммарной ширины изображений; вводится без указания единиц измерения -->
  |Ширина изображения    = <!-- Ширина первого изображения; по умолчанию — 300px (при двух изображениях — 150px); вводится без указания единиц измерения -->
  |Ширина изображения2   = <!-- Ширина второго изображения; по умолчанию 150px; вводится без указания единиц измерения -->
@@ -44,7 +44,7 @@
  |Параллельная1         = <!-- Первая параллельная денежная единица -->
  |Параллельная2         = <!-- Вторая параллельная денежная единица -->
  |Параллельная3         = <!-- Третья параллельная денежная единица -->
- |Символ                = <!-- Символ валюты -->
+ |Ярмаконь тешкс                = <!-- Ярмаконь тешкс валюты -->
  |Аббревиатура          = <!-- Аббревиатура валюты -->
  |Обозначение           = <!-- Обозначение валюты, используемое при выводе валютных курсов -->
  |Монеты                = <!-- Монеты достоинством в… -->
@@ -95,15 +95,15 @@
  |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
- |Изображение           = 500_Euro.Recto.png
- |Изображение2          =
+ |Артовкс           = 500_Euro.Recto.png
+ |Артовкс2          =
  |Общая подпись         = Банкноты и монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="a">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
- |Символ                = €
+ |Ярмаконь тешкс                = €
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Курс1                 = {{Валютный курс|EUR|RUB|1000}}
@@ -125,15 +125,15 @@
  |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
- |Изображение           = 500_Euro.Recto.png
- |Изображение2          =
+ |Артовкс           = 500_Euro.Recto.png
+ |Артовкс2          =
  |Общая подпись         = Банкноты и монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="a">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
- |Символ                = {{Знак валюты|EUR|all|sep=&nbsp;•}}
+ |Ярмаконь тешкс                = {{Знак валюты|EUR|all|sep=&nbsp;•}}
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Курс1                 = {{Валютный курс|EUR|RUB|1000}}
@@ -159,16 +159,16 @@
  |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
- |Изображение           = 500_Euro.Recto.png
- |Изображение2          =
- |Подпись               = Банкноты
- |Подпись2              = Монеты
+ |Артовкс           = 500_Euro.Recto.png
+ |Артовкс2          =
+ |Артовксонть эйстэ               = Банкноты
+ |Артовксонть эйстэ2              = Монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="b">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
- |Символ                = €
+ |Ярмаконь тешкс                = €
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Центробанк            = [[Европейский центральный банк]]
@@ -185,16 +185,16 @@
  |Эсьлем = Ευρώ
  |Код языка             = el
  |ISO-en                = Euro
- |Изображение           = 500_Euro.Recto.png
- |Изображение2          =
- |Подпись               = Банкноты
- |Подпись2              = Монеты
+ |Артовкс           = 500_Euro.Recto.png
+ |Артовкс2          =
+ |Артовксонть эйстэ               = Банкноты
+ |Артовксонть эйстэ2              = Монеты
  |ISO                   = EUR
  |Эмитент               = [[Европейский союз]]
  |Неоф_пользователи     = {{Флагификация|Республика Косово}}<ref group="b">Частично признанное государство</ref>
  |Состоит1              = [[Евроцент]]
  |Соотношение1          = 100
- |Символ                = {{Знак валюты|EUR|all|sep=&nbsp;•}}
+ |Ярмаконь тешкс                = {{Знак валюты|EUR|all|sep=&nbsp;•}}
  |Монеты                = 1, 2, 5, 10, 20, 50 cent, €1, €2
  |Банкноты              = €5, €10, €20, €50, €100, €200, €500
  |Центробанк            = [[Европейский центральный банк]]
@@ -227,13 +227,13 @@
 |<nowiki>Пример{{ref-ru}}</nowiki>
 |Пример{{ref-ru}}
 |-
-|{{t|Флагификация}}
-|<nowiki>{{Флагификация|Российская Федерация}}</nowiki>
-|{{Флагификация|Российская Федерация}}
+|{{t|Масторкоцт}}
+|<nowiki>{{Масторкоцт|Россиянь Мастор}}</nowiki>
+|{{Масторкоцт|Россиянь Мастор}}
 |-
-|{{t|Флаг}}
-|<nowiki>{{Флаг|Российская Федерация}} [[Российская Федерация]]</nowiki>
-|{{Флаг|Российская Федерация}} [[Российская Федерация]]
+|{{t|Коцт}}
+|<nowiki>{{Коцт|Россиянь Мастор}} [[Россиянь Мастор]]</nowiki>
+|{{Коцт|Россиянь Мастор}} [[Россиянь Мастор]]
 |-
 |{{t|Знак валюты}}
 |<nowiki>{{Знак валюты|RUB}} или {{Знак валюты|RUB|all|sep=&nbsp;•}}</nowiki>
@@ -243,9 +243,9 @@
 |<nowiki>{{date}} или {{date|25|12|1999}}</nowiki>
 |{{date}} (текущая дата) или {{date|25|12|1999}}
 |-
-|{{t|Валютный курс}}
-|<nowiki>{{Валютный курс|RUB|USD}} или {{Валютный курс|RUB|USD|10}}</nowiki>
-|{{Валютный курс|RUB|USD}} или {{Валютный курс|RUB|USD|10}} (произведено умножение на 10)
+|{{t|Ярмаконь курс}}
+|<nowiki>{{Ярмаконь курс|RUB|USD}} или {{Ярмаконь курс|RUB|USD|10}}</nowiki>
+|{{Ярмаконь курс|RUB|USD}} или {{Ярмаконь курс|RUB|USD|10}} (произведено умножение на 10)
 |-
 |{{t|Дробь}}
 |<nowiki>{{Дробь|100}}, {{Дробь|2|3}} или {{Дробь|1|1|2}}</nowiki>
